--- a/templates/print_template.html
+++ b/templates/print_template.html
@@ -32,7 +32,7 @@
             <br>
             <div class="d-flex justify-content-between px-5">
                 <span><strong>الأستاذ:</strong> {{ nom_prof }}</span>
-                <span><strong>الموسم الدراسي:</strong> 2025/2026</span>
+                <span><strong>الموسم الدراسي:</strong> {{ school_year }}</span>
             </div>
             <div class="d-flex justify-content-between px-5 mt-2">
                 <span><strong>الثلاثي:</strong> {{ trimestre }}</span>
